--- a/groups/templates/groups/show.html
+++ b/groups/templates/groups/show.html
@@ -91,14 +91,12 @@
 
             <div class="post-topbar">
 
-                <form action='{% url "index" %}' method="post" enctype="multipart/form-data">
+                <form action='' method="post" enctype="multipart/form-data">
                     {% csrf_token %}
 
                     <div class="row">
                         <div class="col-10">
                             {{form.as_p}}
-
-
                             {% if form.content.error %}
                             <div id="form-error">
                                 {{form.content.errors.0}}
@@ -115,6 +113,7 @@
 
 
             </div>
+            
 
 
 
@@ -173,6 +172,7 @@
 
 
         </div>
+        {% block content %}{% endblock %}
 
         {% elif not invited and request_sent == False %}
         <div class="row pt-1 mt-5">
